--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 kotlin.code.style=official
-kotlin.version=1.8.0
-agp.version=7.3.0
-compose.version=1.3.1
-koin.version=3.3.3
+kotlin.version=1.9.21
+agp.version=8.2.0
+compose.version=1.6.0-beta01
+koin.version=3.5.3
